<resources>
    <string name="app_name">Uni App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать, %1$s!"</string>
    <string name="invalid_username">Неверный логин</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="login_failed">"Ошибка"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_filter">Filter</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_home">Главная страница</string>
    <string name="menu_account">Личный кабинет</string>
    <string name="menu_report">Создать отчет</string>
    <string name="menu_log_out">Выйти</string>
    <string name="event_name_res">Перенос</string>
    <string name="remember_me_text">Запомнить</string>
    <string name="add_event_description">Описание</string>
    <string name="replacement">Замена</string>
    <string name="shift">Перенос</string>
    <string name="shift_with_replacement">Перенос с заменой</string>

    <string name="Creation">Изменение в расписании</string>
    <string name="event_when">С %1$s занятие </string>
    <string name="event_subject">Предмет: %1$s</string>
    <string name="event_reason">Причина: %1$s</string>
    <string name="event_group">Группа: %1$s</string>
    <string name="change_event">Редактирование уведомления</string>

    <string name="reason_health">Б/Л (больничный)</string>
    <string name="reason_rest">Отпуск</string>
    <string name="reason_command">Командировка</string>
    <string name="reason_other">Другое</string>
    
    <string-array name="lesson_status">
        <item>Восстановлено</item>
        <item>Невосстановлено</item>
        <item>-</item>
    </string-array>
</resources>