<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_log_out" />
    </group>
</menu>